# RustSpellChecker

./: Cargo.toml
src/: main.rs
