[package]
name = "spell-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.7"
tokio = { version="0.2.22", features=["macros", "fs"]}
serde_json = "1.0.57"
serde = {version = "1.0.115", features=["derive"]}